Source/WebCore/dom/ShadowRoot.h
@@ -117,7 +117,6 @@ public:
 private:
     explicit ShadowRoot(Document*);
     virtual ~ShadowRoot();
-    virtual String nodeName() const;
     virtual PassRefPtr<Node> cloneNode(bool deep);
     virtual bool childTypeAllowed(NodeType) const;
     virtual void childrenChanged(bool changedByParser, Node* beforeChange, Node* afterChange, int childCountDelta) OVERRIDE;
