LayoutTests/fast/dom/shadow/resources/shadow-dom.js
@@ -52,8 +52,7 @@ function isShadowHost(node)
 
 function isShadowRoot(node)
 {
-    // FIXME: window.internals should have internals.isShadowRoot(node).
-    return node.nodeName == "#shadow-root";
+    return (node instanceof WebKitShadowRoot);
 }
 
 function isIframeElement(element)
